components/shared/Loading/Loading.module.scss
/**
 * ==============================================
 * Dot Typing
 * ==============================================
 */

@use "styles/colors";

$dot-width: 10px !default;
$dot-height: 10px !default;
$dot-radius: $dot-width/2 !default;

$dot-color: colors.$primary !default;
$dot-bg-color: $dot-color !default;
$dot-before-color: $dot-color !default;
$dot-after-color: $dot-color !default;

$dot-spacing: $dot-width + $dot-width/2 !default;

$left-pos: -9999px;
$x1: -$left-pos - $dot-spacing;
$x2: -$left-pos;
$x3: -$left-pos + $dot-spacing;

@mixin dot(
  $width: $dot-width,
  $height: $dot-height,
  $radius: $dot-radius,
  $bg-color: $dot-bg-color,
  $color: $dot-color
) {
  width: $width;
  height: $height;
  border-radius: $radius;
  background-color: $bg-color;
  color: $color;
}

.dot-typing {
  position: relative;
  left: $left-pos;

  @include dot;

  box-shadow: $x1 0 0 0 $dot-before-color, $x2 0 0 0 $dot-color,
    $x3 0 0 0 $dot-after-color;
  animation: dot-typing 1s infinite linear;
}

@keyframes dot-typing {
  0% {
    box-shadow: $x1 0 0 0 $dot-before-color, $x2 0 0 0 $dot-color,
      $x3 0 0 0 $dot-after-color;
  }

  16.667% {
    box-shadow: $x1 -10px 0 0 $dot-before-color, $x2 0 0 0 $dot-color,
      $x3 0 0 0 $dot-after-color;
  }

  33.333% {
    box-shadow: $x1 0 0 0 $dot-before-color, $x2 0 0 0 $dot-color,
      $x3 0 0 0 $dot-after-color;
  }

  50% {
    box-shadow: $x1 0 0 0 $dot-before-color, $x2 -10px 0 0 $dot-color,
      $x3 0 0 0 $dot-after-color;
  }

  66.667% {
    box-shadow: $x1 0 0 0 $dot-before-color, $x2 0 0 0 $dot-color,
      $x3 0 0 0 $dot-after-color;
  }

  83.333% {
    box-shadow: $x1 0 0 0 $dot-before-color, $x2 0 0 0 $dot-color,
      $x3 -10px 0 0 $dot-after-color;
  }

  100% {
    box-shadow: $x1 0 0 0 $dot-before-color, $x2 0 0 0 $dot-color,
      $x3 0 0 0 $dot-after-color;
  }
}

